Block in major elements and shapes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,162 @@
   <title>Design Teardown</title>
 </head>
 <body>
+  <header>
+    <div class="content-nav-container">
+      <nav aria-label="content-type" class="content-nav">
+        <div class="logo"></div>
+        <ul class="type-items">
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+        </ul>
+        <div class="search-wrapper">
+          <input type="search" name="searchbar" id="search_bar">
+        </div>
+      </nav>
+    </div>
+    <div class="tag-nav-container">
+      <nav aria-label="article-tag">
+        <ul class="tag-items">
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
+          <li>Nav Item</li>
 
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section class="grid two-by-one">
+    <section class="section-container">
+      <article>
+        <header>
+          <figure>
+            <div class="article-image"></div>
+          </figure>
+          <div class="header-text-container">
+            header text
+          </div>
+        </header>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis accusamus minima dolor, cumque dolores quod sequi quasi ipsum beatae molestias dicta magnam non voluptate velit libero labore laudantium reprehenderit perferendis.</p>
+        <a href="#">Continue reading</a>
+      </article>
+      <article>
+        <header>
+          <figure>
+            <div class="article-image"></div>
+          </figure>
+          <div class="header-text-container"></div>
+        </header>
+      </article>
+      <article>
+        <header>
+          <figure>
+            <div class="article-image"></div>
+          </figure>
+          <div class="header-text-container"></div>
+        </header>
+      </article>
+    </section>
+    <aside>
+      <div class="newsletter-container">
+        <div class="newsletter-box">
+          <div class="aside-image"></div>
+        </div>
+      </div>
+    </aside>
+  </section>
+  <section class="section-container">
+    <div class="card-container">
+      <article class="card">
+        <h2>Lorem Ip</h2>
+        <button></button>
+      </article>
+      <article class="card">
+        <h2>Lorem Ip</h2>
+        <button></button>
+      </article>
+      <article class="card">
+        <h2>Lorem Ip</h2>
+        <button></button>
+      </article>
+    </div>
+  </section class="section-container">
+  <section class="section-container">
+    <article>
+      <header>
+        <figure>
+          <div class="article-image"></div>
+        </figure>
+        <h2>Lorem</h2>
+      </header>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque dicta nam doloremque tempora libero est, inventore a reprehenderit? Quidem iusto, hic doloribus ipsum numquam eius adipisci consequatur maiores voluptatum minima.</p>
+      <footer></footer>
+    </article>
+    <article>
+      <header>
+        <figure>
+          <div class="article-image"></div>
+        </figure>
+        <h2>Lorem</h2>
+      </header>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum voluptatum delectus temporibus quisquam provident aut ut in rem officiis, reiciendis esse est illo et sequi consequuntur sed laboriosam ex unde.</p>
+      <footer></footer>
+    </article>
+    <article>
+      <header>
+        <figure>
+          <div class="article-image"></div>
+        </figure>
+        <h2>Lorem</h2>
+      </header>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium quo eaque officiis ex! Nobis, eos quam. Id sit dolor ipsa modi a, alias nulla iste aperiam placeat cumque ea facilis.</p>
+      <footer></footer>
+    </article>
+    <article>
+      <header>
+        <figure>
+          <div class="article-image"></div>
+        </figure>
+        <h2>Lorem</h2>
+      </header>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque esse excepturi distinctio reiciendis debitis blanditiis mollitia animi, vitae perspiciatis sit impedit placeat sunt aliquid iste minima numquam quia sint.</p>
+      <footer></footer>
+    </article>
+  </section>
+  <footer>
+    <ul>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+    </ul>
+  </footer>
 </body>
 </html>
