Add visual hierarchy weighting

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li>Nav Item</li>
         </ul>
         <div class="search-wrapper">
-          <input type="search" name="searchbar" id="search_bar">
+          <input type="search" name="searchbar" id="search_bar" placeholder="Lorem...">
         </div>
       </nav>
     </div>
@@ -48,7 +48,6 @@
           <li>Nav Item</li>
           <li>Nav Item</li>
           <li>Nav Item</li>
-
         </ul>
       </nav>
     </div>
@@ -56,38 +55,63 @@
   <section class="grid two-by-one">
     <section class="section-container">
       <article>
-        <header>
+        <div class="article-content-container">
           <figure>
-            <div class="article-image"></div>
+            <div class="article-image big-image"></div>
           </figure>
-          <div class="header-text-container">
-            header text
+          <div class="article-text-container">
+            <header>
+              <div class="header-text-container">
+                <p>Lorem ipsum</p>
+                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
+              </div>
+            </header>
           </div>
-        </header>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis accusamus minima dolor, cumque dolores quod sequi quasi ipsum beatae molestias dicta magnam non voluptate velit libero labore laudantium reprehenderit perferendis.</p>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis accusamus minima dolor, cumque dolores quod sequi quasi ipsum beatae molestias dicta magnam non voluptate velit libero labore laudantium reprehenderit perferendis.
+        </p>
         <a href="#">Continue reading</a>
       </article>
       <article>
-        <header>
+        <div class="article-content-container">
           <figure>
             <div class="article-image"></div>
           </figure>
-          <div class="header-text-container"></div>
-        </header>
+          <div class="article-text-container">
+            <header>
+              <div class="header-text-container">
+                <p>Lorem ipsum</p>
+                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
+              </div>
+            </header>
+          </div>
+        </div>
       </article>
       <article>
-        <header>
+        <div class="article-content-container">
           <figure>
             <div class="article-image"></div>
           </figure>
-          <div class="header-text-container"></div>
-        </header>
+          <div class="article-text-container">
+            <header>
+              <div class="header-text-container">
+                <p>Lorem ipsum</p>
+                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
+              </div>
+            </header>
+          </div>
+        </div>
       </article>
     </section>
     <aside>
       <div class="newsletter-container">
         <div class="newsletter-box">
-          <div class="aside-image"></div>
+          <div class="newsletter-image"></div>
+          <div class="newsletter-content">
+            <button></button>
+            <p>Okay so, let me give you the low-down on this...</p>
+          </div>
         </div>
       </div>
     </aside>
@@ -96,62 +120,135 @@
     <div class="card-container">
       <article class="card">
         <h2>Lorem Ip</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam asperiores, ab dignissimos aspernatur magni praesentium dolorum porro assumenda!</p>
         <button></button>
       </article>
       <article class="card">
         <h2>Lorem Ip</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam asperiores, ab dignissimos aspernatur magni praesentium dolorum porro assumenda!</p>
         <button></button>
       </article>
       <article class="card">
         <h2>Lorem Ip</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam asperiores, ab dignissimos aspernatur magni praesentium dolorum porro assumenda!</p>
         <button></button>
       </article>
     </div>
   </section class="section-container">
-  <section class="section-container">
-    <article>
-      <header>
+  <section class="section-container grid two-by-two">
+    <article class="wide">
+      <div class="article-content-container">
         <figure>
           <div class="article-image"></div>
         </figure>
-        <h2>Lorem</h2>
-      </header>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque dicta nam doloremque tempora libero est, inventore a reprehenderit? Quidem iusto, hic doloribus ipsum numquam eius adipisci consequatur maiores voluptatum minima.</p>
-      <footer></footer>
+        <div class="article-text-container">
+          <header>
+            <div class="header-text-container">
+              <p>.... writes</p>
+              <h2>Loremmmmmmmm</h2>
+            </div>
+          </header>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque dicta nam doloremque tempora libero est, inventore a reprehenderit? Quidem iusto, hic doloribus ipsum numquam eius adipisci consequatur maiores voluptatum minima.</p>
+          <footer>Some extra info</footer>
+        </div>
+      </div>
     </article>
-    <article>
-      <header>
+    <article class="wide">
+      <div class="article-content-container">
         <figure>
           <div class="article-image"></div>
         </figure>
-        <h2>Lorem</h2>
-      </header>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum voluptatum delectus temporibus quisquam provident aut ut in rem officiis, reiciendis esse est illo et sequi consequuntur sed laboriosam ex unde.</p>
-      <footer></footer>
+        <div class="article-text-container">
+          <header>
+            <div class="header-text-container">
+              <p>.... writes</p>
+              <h2>Loremooooooo</h2>
+            </div>
+          </header>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum voluptatum delectus temporibus quisquam provident aut ut in rem officiis, reiciendis esse est illo et sequi consequuntur sed laboriosam ex unde.</p>
+          <footer>Some extra info</footer>
+        </div>
+      </div>
     </article>
-    <article>
-      <header>
+    <article class="wide">
+      <div class="article-content-container">
         <figure>
           <div class="article-image"></div>
         </figure>
-        <h2>Lorem</h2>
-      </header>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium quo eaque officiis ex! Nobis, eos quam. Id sit dolor ipsa modi a, alias nulla iste aperiam placeat cumque ea facilis.</p>
-      <footer></footer>
+        <div class="article-text-container">
+          <header>
+            <div class="header-text-container">
+              <p>.... writes</p>
+              <h2>Loremuuuuuu</h2>
+            </div>
+          </header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium quo eaque officiis ex! Nobis, eos quam. Id sit dolor ipsa modi a, alias nulla iste aperiam placeat cumque ea facilis.</p>
+          <footer>Some extra info</footer>
+        </div>
+      </div>
     </article>
-    <article>
-      <header>
+    <article class="wide">
+      <div class="article-content-container">
         <figure>
           <div class="article-image"></div>
         </figure>
-        <h2>Lorem</h2>
-      </header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque esse excepturi distinctio reiciendis debitis blanditiis mollitia animi, vitae perspiciatis sit impedit placeat sunt aliquid iste minima numquam quia sint.</p>
-      <footer></footer>
+        <div class="article-text-container">
+          <header>
+            <div class="header-text-container">
+              <p>.... writes</p>
+              <h2>Loremssssssss</h2>
+            </div>
+          </header>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque esse excepturi distinctio reiciendis debitis blanditiis mollitia animi, vitae perspiciatis sit impedit placeat sunt aliquid iste minima numquam quia sint.</p>
+          <footer>Some extra info</footer>
+        </div>
+      </div>
     </article>
   </section>
-  <footer>
-    <ul>
+  <section class="section-container boxes">
+    <div class="box-container">
+      <div class="box">
+        <div class="box-image"></div>
+        <h3>lllllllllllllllorem</h3>
+        <button></button>
+      </div>
+    </div>
+    <div class="box-container">
+      <div class="box">
+        <div class="box-image"></div>
+        <h3>Looooooooooooooorem</h3>
+        <button></button>
+      </div>
+    </div>
+    <div class="box-container">
+      <div class="box">
+        <div class="box-image"></div>
+        <h3>Lorrrrrrrrrrrrrrrem</h3>
+        <button></button>
+      </div>
+    </div>
+    <div class="box-container">
+      <div class="box">
+        <div class="box-image"></div>
+        <h3>Loreeeeeeeeeeeeeeem</h3>
+        <button></button>
+      </div>
+    </div>
+    <div class="box-container">
+      <div class="box">
+        <div class="box-image"></div>
+        <h3>Loremmmmmmmmmmmmmmm</h3>
+        <button></button>
+      </div>
+    </div>
+  </section>
+  <footer class="links">
+    <ul class="footer-items">
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
+      <li>Footer Item</li>
       <li>Footer Item</li>
       <li>Footer Item</li>
       <li>Footer Item</li>
