Add Google Font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/stylesheets/reset.css">
   <link rel="stylesheet" href="assets/stylesheets/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700;400&display=swap" rel="stylesheet">
   <title>Design Teardown</title>
 </head>
 <body>
@@ -82,7 +85,7 @@
             <header>
               <div class="header-text-container">
                 <p>Lorem ipsum</p>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
+                <h1 class="regular">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
               </div>
             </header>
           </div>
@@ -97,7 +100,7 @@
             <header>
               <div class="header-text-container">
                 <p>Lorem ipsum</p>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
+                <h1 class="regular">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sed aperiam...</h1>
               </div>
             </header>
           </div>
